--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-Hello World
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Matthew Alan Le Brun</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container top position-sticky">
+        <div class="row top-spacer"></div>
+        <div class="row">
+            <div class="col-3">
+                <img src="images/me.jpg" alt="photo of me" class="img-fluid rounded-circle">
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">
+                <h1>Matthew Alan Le Brun</h1>
+                <p class="mb-0">Ph.D. student at University of Glasgow</p>
+                <p class="mb-0">Member of <a href="https://colab-glasgow.github.io/">CoLab ◦ Concurrency Lab</a></p>
+                <p>Email: <a href="mailto:m.le-brun.1@research.gla.ac.uk">m.le-brun.1@research.gla.ac.uk</a></p>
+            </div>
+        </div>
+        <div class="row spacer"></div>
+    </div>
+    <div class="container shadow-lg p-3 mb-5 bg-white rounded main position-relative">
+        <div class="row bg-white position-sticky top ">
+            <nav class="navbar navbar-expand-lg ">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="col navbar-nav justify-content-center">
+                        <a class="nav-item nav-link" href="#about">About</a>
+                        <a class="nav-item nav-link" href="#">Publications</a>
+                        <a class="nav-item nav-link" href="#">Teaching</a>
+                        <a class="nav-item nav-link" href="#">Open Source</a>
+                        <a class="nav-item nav-link" href="#">Education</a>
+                        <a class="nav-item nav-link" href="#">Employment</a>
+                        <a class="nav-item nav-link" href="#">Outreach</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="row spacer"></div>
+        <div class="row">
+            <div class="container" id="about">
+                <div class="row spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>About</h2>
+                        <p>
+                            I am a 2nd year Ph.D. student in the <a
+                                href="https://www.gla.ac.uk/schools/computing/">School of Computing Science</a>
+                            at the University of Glasgow, supervised by <a
+                                href="https://www.dcs.gla.ac.uk/~ornela/">Ornela Dardha</a> and <a
+                                href="https://simonjf.com/">Simon Fowler</a>.
+                        </p>
+                        <p>
+                            I am a member of the <a
+                                href="https://www.gla.ac.uk/schools/computing/research/researchsections/fata-section/">Formal
+                                Analysis, Theory and Algorithms (FATA)</a>
+                            group, forming part of the <a
+                                href="https://www.gla.ac.uk/schools/computing/research/researchthemes/pl-theme/">Programming
+                                Languages Theme</a>,
+                            and am Scotland's Ph.D. student representative within <a
+                                href="https://scottish-pl-institute.github.io/index.html">SPLI</a>.
+                        </p>
+                        <p>
+                            Previously, I obtained my M.Sc. and B.Sc. from the <a href="https://www.um.edu.mt/ict/">University of Malta</a>, 
+                            supervised by <a href="http://staff.um.edu.mt/afra1/">Adrian Francalanza</a>. 
+                            My research focus was in distributed computing and consensus algorithms.
+                        </p>
+                        <p>
+                            Nowadays, my Ph.D. research spans the areas of Programming Languages, Behavioural Type Theory, Distributed and Concurrent 
+                            Computation, Logic, and Fault-Tolerance. 
+                        </p>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+
+<style>
+    a {
+        color: goldenrod;
+    }
+
+    a:hover {
+        color: darkgoldenrod;
+    }
+
+    .top-spacer {
+        height: 10rem;
+    }
+
+    .spacer {
+        height: 1rem;
+    }
+
+    .top {
+        z-index: 0;
+        top: 0;
+    }
+
+    .main {
+        z-index: 100;
+        height: 100rem;
+    }
+</style>
+
+</html>
