--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="col navbar-nav justify-content-center">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#about">About</a>
                         <a class="nav-item nav-link" href="#">Publications</a>
                         <a class="nav-item nav-link" href="#">Teaching</a>
