--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div class="container shadow-lg p-3 mb-5 bg-white rounded main position-relative">
         <div class="row bg-white position-sticky top ">
             <nav class="navbar navbar-expand-lg ">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> -->
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#about">About</a>
