--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Matthew Alan Le Brun</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#about">About</a>
-                        <a class="nav-item nav-link" href="#">Publications</a>
+                        <a class="nav-item nav-link" href="#publications">Publications</a>
                         <a class="nav-item nav-link" href="#">Teaching</a>
                         <a class="nav-item nav-link" href="#">Open Source</a>
                         <a class="nav-item nav-link" href="#">Education</a>
@@ -55,6 +56,7 @@
                     <div class="col-1"></div>
                     <div class="col">
                         <h2 class=>About</h2>
+
                         <p>
                             I am a 2nd year Ph.D. student in the <a
                                 href="https://www.gla.ac.uk/schools/computing/">School of Computing Science</a>
@@ -73,17 +75,116 @@
                                 href="https://scottish-pl-institute.github.io/index.html">SPLI</a>.
                         </p>
                         <p>
-                            Previously, I obtained my M.Sc. and B.Sc. from the <a href="https://www.um.edu.mt/ict/">University of Malta</a>, 
-                            supervised by <a href="http://staff.um.edu.mt/afra1/">Adrian Francalanza</a>. 
+                            Previously, I obtained my M.Sc. and B.Sc. from the <a
+                                href="https://www.um.edu.mt/ict/">University of Malta</a>,
+                            supervised by <a href="http://staff.um.edu.mt/afra1/">Adrian Francalanza</a>.
                             My research focus was in distributed computing and consensus algorithms.
                         </p>
                         <p>
-                            Nowadays, my Ph.D. research spans the areas of Programming Languages, Behavioural Type Theory, Distributed and Concurrent 
-                            Computation, Logic, and Fault-Tolerance. 
+                            Nowadays, my Ph.D. research spans the areas of Programming Languages, Behavioural Type
+                            Theory, Distributed and Concurrent
+                            Computation, Logic, and Fault-Tolerance.
                         </p>
                     </div>
                     <div class="col-1"></div>
                 </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
+            <div class="container" id="publications">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>Publications</h2>
+
+                        <h4>Proceedings Papers</h4>
+
+                        <dl class="container">
+                            <dt>MAGπ: Types for Failure-Prone Communication</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun, Ornela Dardha
+                                    <br>
+                                    <i>European Symposium on Programming (ESOP) 2023</i>
+                                </div>
+                                <div class="col text-end">
+                                    <a href="https://www.dcs.gla.ac.uk/~ornela/publications/LBD23.pdf"
+                                        title="Published">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                    <a href="https://arxiv.org/pdf/2301.10827.pdf" title="Extended">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                    <a href="https://dblp.uni-trier.de/rec/conf/esop/BrunD23.html?view=bibtex">
+                                        <span title="Bibtex" class="fa fa-2x fa-file-code-o"></span></a>
+                                </div>
+                            </dd>
+
+                            <dt>Graft: General Purpose Raft Consensus in Elixir</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun, Duncan Paul Attard, Adrian Francalanza
+                                    <br>
+                                    <i>Erlang Workshop 2021</i>
+                                </div>
+                                <div class="col text-end">
+                                    <a href="http://staff.um.edu.mt/afra1/papers/Erlang21.pdf" title="Published">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                    <a href="https://dblp.org/rec/conf/erlang/BrunAF21.html?view=bibtex">
+                                        <span title="Bibtex" class="fa fa-2x fa-file-code-o"></span></a>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <h4>Talk Proposals</h4>
+
+                        <dl class="container">
+                            <dt>MAGπ: Types for Failure-Prone Communication</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun, Ornela Dardha
+                                    <br>
+                                    <i>Programming Language Approaches to Concurrency- & Communication-cEntric Software (PLACES) 2023</i>
+                                </div>
+                                <div class="col text-end">
+                                    <a href="https://www.dcs.gla.ac.uk/~ornela/publications/LBD23b.pdf" title="Extended Abstract">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <h4>Theses</h4>
+
+                        <dl class="container">
+                            <dt>On Extending and Verifying the Raft Consensus Algorithm</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun
+                                    <br>
+                                    <i>M.Sc. Dissertation 2021</i>
+                                </div>
+                                <div class="col text-end">
+                                    <!-- <a href="" title="Report">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a> -->
+                                </div>
+                            </dd>
+
+                            <dt>On Implementing and Evaluating the Raft Distributed Consensus Algorithm</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun
+                                    <br>
+                                    <i>B.Sc. Final Year Project 2020</i>
+                                </div>
+                                <div class="col text-end">
+                                    <a href="https://www.um.edu.mt/library/oar/bitstream/123456789/71739/1/20BCS010%20-%20Le%20Brun%20Matthew-Alan.pdf" title="Report">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
             </div>
         </div>
     </div>
@@ -114,6 +215,15 @@
         height: 1rem;
     }
 
+    .sec-t-spacer {
+        height: 3.5rem;
+    }
+
+    .sec-b-spacer {
+        height: 3rem;
+        border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
+    }
+
     .top {
         z-index: 0;
         top: 0;
@@ -122,6 +232,14 @@
     .main {
         z-index: 100;
         height: 100rem;
+    }
+
+    .paper {
+        padding-bottom: 0.5rem;
+    }
+
+    h2 {
+        padding-bottom: 1rem;
     }
 </style>
 
