--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row spacer"></div>
     </div>
-    <div class="container shadow-lg p-3 mb-5 bg-white rounded main position-relative">
+    <div class="container shadow-lg p-3 mb-3 bg-white rounded main position-relative">
         <div class="row bg-white position-sticky top ">
             <nav class="navbar navbar-expand-lg ">
                 <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -39,11 +39,11 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#about">About</a>
                         <a class="nav-item nav-link" href="#publications">Publications</a>
-                        <a class="nav-item nav-link" href="#">Teaching</a>
-                        <a class="nav-item nav-link" href="#">Open Source</a>
-                        <a class="nav-item nav-link" href="#">Education</a>
-                        <a class="nav-item nav-link" href="#">Employment</a>
-                        <a class="nav-item nav-link" href="#">Outreach</a>
+                        <a class="nav-item nav-link" href="#teaching">Teaching</a>
+                        <a class="nav-item nav-link" href="#open">Open Source</a>
+                        <a class="nav-item nav-link" href="#education">Education</a>
+                        <a class="nav-item nav-link" href="#employment">Employment</a>
+                        <a class="nav-item nav-link" href="#outreach">Outreach</a>
                     </div>
                 </div>
             </nav>
@@ -186,8 +186,131 @@
                 </div>
                 <div class="row sec-b-spacer"></div>
             </div>
+
+
+            <div class="container" id="teaching">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>Teaching</h2>
+
+                        <h4>Lectures</h4>
+                        <dl class="container">
+                            <dt><a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4072">Theory of Computation (H)</a></dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    University of Glasgow, 2023
+                                    <br>
+                                    <i>Delivered two lectures of 2 hours each on the pi-calculus as a foundation for concurrent computation; 
+                                        one lecture focused on equivalence theories, the other on type systems.
+                                    </i>
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="container">
+                            <dt><a href="https://www.um.edu.mt/courses/studyunit/CPS2001">Programming Paradigms</a></dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    University of Malta, 2021
+                                    <br>
+                                    <i>Delivered two lectures of 2 hours each on concurrent programming with asynchronous message passing. 
+                                        Lectures focused on the actor model and Erlang, with an in-depth look at fault-isolation and fault-tolerance.
+                                    </i>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <h4>Teaching Assistant</h4>
+
+                        <dl class="container">
+                            <dt>University of Glasgow</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    <a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4016">Programming Languages (H)</a>, 2023
+                                    <br>
+                                    <a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4072">Theory of Computation (H)</a>, 2023
+                                </div>
+                            </dd>
+                            <dt>University of Malta</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    <a href="https://www.um.edu.mt/courses/studyunit/CPS2001">Programming Paradigms</a>, 2021
+                                    <br>
+                                    <a href="https://www.um.edu.mt/courses/studyunit/CPS2005">Formal Languages and Automata</a>, 2020-2021
+                                </div>
+                            </dd>
+                        </dl>
+
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
+
+            <div class="container" id="open">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>Open Source</h2>
+
+
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
+
+            <div class="container" id="education">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>Education</h2>
+
+
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
+
+            <div class="container" id="employment">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>Employment</h2>
+
+
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
+
+            <div class="container" id="outreach">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2 class=>Outreach</h2>
+
+
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
         </div>
     </div>
+    <div class="text-center">&copy; Matthew Alan Le Brun 2023</div>
 
 
 
@@ -231,7 +354,6 @@
 
     .main {
         z-index: 100;
-        height: 100rem;
     }
 
     .paper {
