--- a/index.html
+++ b/index.html
@@ -256,7 +256,12 @@
                     <div class="col">
                         <h2 class=>Open Source</h2>
 
-
+                        <h4><a href="https://github.com/MatthewAlanLeBrun/graft">Graft</a></h4>
+                        I am the main developer and maintainer of Graft, a tool for building distributed and fault-tolerant replicated 
+                        state machines. Graft allows users to build applications as a single state machine, and automates replication 
+                        over a distributed concensus cluster. The consensus engine is my own implementation of Raft, which has been evaluated 
+                        to be comparable in performance to state-of-the-art implementations, and has formal guarantees of 
+                        correctness by means of runtime verificaiton.
                     </div>
                     <div class="col-1"></div>
                 </div>
