--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <a class="nav-item nav-link" href="#publications">Publications</a>
                         <a class="nav-item nav-link" href="#teaching">Teaching</a>
                         <a class="nav-item nav-link" href="#open">Open Source</a>
+                        <a class="nav-item nav-link" href="#events">Events</a>
                         <a class="nav-item nav-link" href="#education">Education</a>
                         <a class="nav-item nav-link" href="#employment">Employment</a>
-                        <a class="nav-item nav-link" href="#outreach">Outreach</a>
                     </div>
                 </div>
             </nav>
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col">
-                        <h2 class=>About</h2>
+                        <h2>About</h2>
 
                         <p>
                             I am a 2nd year Ph.D. student in the <a
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col">
-                        <h2 class=>Publications</h2>
+                        <h2>Publications</h2>
 
                         <h4>Proceedings Papers</h4>
 
@@ -193,7 +193,7 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col">
-                        <h2 class=>Teaching</h2>
+                        <h2>Teaching</h2>
 
                         <h4>Lectures</h4>
                         <dl class="container">
@@ -237,7 +237,7 @@
                                 <div class="col">
                                     <a href="https://www.um.edu.mt/courses/studyunit/CPS2001">Programming Paradigms</a>, 2021
                                     <br>
-                                    <a href="https://www.um.edu.mt/courses/studyunit/CPS2005">Formal Languages and Automata</a>, 2020-2021
+                                    <a href="https://www.um.edu.mt/courses/studyunit/CPS2005">Formal Languages and Automata</a>, 2020&mdash;2021
                                 </div>
                             </dd>
                         </dl>
@@ -254,14 +254,39 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col">
-                        <h2 class=>Open Source</h2>
+                        <h2>Open Source</h2>
 
                         <h4><a href="https://github.com/MatthewAlanLeBrun/graft">Graft</a></h4>
                         I am the main developer and maintainer of Graft, a tool for building distributed and fault-tolerant replicated 
                         state machines. Graft allows users to build applications as a single state machine, and automates replication 
-                        over a distributed concensus cluster. The consensus engine is my own implementation of Raft, which has been evaluated 
+                        over a distributed consensus cluster. The consensus engine is my own implementation of Raft, which has been evaluated 
                         to be comparable in performance to state-of-the-art implementations, and has formal guarantees of 
-                        correctness by means of runtime verificaiton.
+                        correctness by means of runtime verification.
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
+
+
+            <div class="container" id="events">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2>Events</h2>
+
+                        <dl class="container">
+                            <dt><a href="https://www.um.edu.mt/projects/behapi/behapi-tutorial-day-discotec-2023/">BehAPI Tutorial Day @ DisCoTec, June 2023</a> (Invited Participant)</dt>
+                            <dt><a href="https://www.gla.ac.uk/events/sciencefestival/gsf2023/">Glasgow Science Festival, June 2023</a> (Science Communicator)</dt>
+                            <dt><a href="http://www.discotec.org/2023/forte.html">Formal Techniques for Distributed Objects, Components, and Systems (FORTE), June 2023</a> (Reviewer)</dt>
+                            <dt><a href="https://concur2022.mimuw.edu.pl/">International Conference on Concurrency Theory (CONCUR), September 2022</a> (Reviewer)</dt>
+                            <dt><a href="https://www.macs.hw.ac.uk/splv/splv-2022/">Scottish Programming Languages and Verification Summer School (SPLV), July 2022</a> (Invited Participant)</dt>
+                            <dt><a href="https://spls-series.github.io/meetings/2022/july/">Scottish Programming Languages Seminar (SPLS), July 2022</a> (Organiser)</dt>
+                            <dt><a href="https://www.gla.ac.uk/events/sciencefestival/aboutus/previousglasgowsciencefestivals/gsf2022/">Glasgow Science Festival, June 2022</a> (Science Communicator)</dt>
+                            <dt><a href="https://2021.euro-par.org/">European Conference on Parallel and Distributed Computing (Euro-Par), August 2021</a> (Reviewer)</dt>
+                        </dl>
+
                     </div>
                     <div class="col-1"></div>
                 </div>
@@ -274,8 +299,43 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col">
-                        <h2 class=>Education</h2>
+                        <h2>Education</h2>
 
+                        <dl class="container">
+                            <dt>Ph.D.</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    University of Glasgow, 2022&mdash;present
+                                    <br>
+                                    <i>My Ph.D. is in Programming Languages, Behavioural Type Theory, Concurrent and Distributed Computation, and Fault-Tolerance.
+                                    </i>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <dl class="container">
+                            <dt>Master of Science</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    University of Malta, 2020&mdash;2022
+                                    <br>
+                                    <i>My M.Sc. was a full time research degree in Distributed Computing, Consensus Algorithms, and Runtime Verification.
+                                    </i>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <dl class="container">
+                            <dt>Bachelor of Science (Hons) (Computing Science)</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    University of Malta, 2017&mdash;2020
+                                    <br>
+                                    <i>My B.Sc. focused on theoretical foundations of computation, programming languages, and distributed systems.
+                                    </i>
+                                </div>
+                            </dd>
+                        </dl>
 
                     </div>
                     <div class="col-1"></div>
@@ -289,28 +349,28 @@
                 <div class="row">
                     <div class="col-1"></div>
                     <div class="col">
-                        <h2 class=>Employment</h2>
+                        <h2>Employment</h2>
 
+                        <dl class="container">
+                            <dt>Software Engineer (Part Time)</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    CCBill EU, 2020&mdash;2021
+                                </div>
+                            </dd>
+
+                            <dt>Software Engineering Intern</dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    CCBill EU, 2018&mdash;2020
+                                </div>
+                            </dd>
+                        </dl>
 
                     </div>
                     <div class="col-1"></div>
                 </div>
-                <div class="row sec-b-spacer"></div>
-            </div>
-
-
-            <div class="container" id="outreach">
-                <div class="row sec-t-spacer"></div>
-                <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col">
-                        <h2 class=>Outreach</h2>
-
-
-                    </div>
-                    <div class="col-1"></div>
-                </div>
-                <div class="row sec-b-spacer"></div>
+                <div class="row sec-last-spacer"></div>
             </div>
 
         </div>
@@ -350,6 +410,10 @@
     .sec-b-spacer {
         height: 3rem;
         border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
+    }
+
+    .sec-last-spacer {
+        height: 3rem;
     }
 
     .top {
