The beginning of the end of the beginning

--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
                 <img src="images/me.jpg" alt="photo of me" class="img-fluid rounded-circle">
             </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row">
             <div class="col">
                 <h1>Matthew Alan Le Brun</h1>
                 <p class="mb-0">Ph.D. student at University of Glasgow</p>
                 <p class="mb-0">Member of <a href="https://colab-glasgow.github.io/">CoLab ◦ Concurrency Lab</a></p>
-                <p>Email: <a href="mailto:m.le-brun.1@research.gla.ac.uk">m.le-brun.1@research.gla.ac.uk</a></p>
+                <p class="mb-0">Glasgow's Ph.D. representative for <a href="https://spli.scot/">SPLI</a></p>
+                <p>Email: m.le-brun.1 -at- research.gla.ac.uk</p>
+            </div>
+            <div class="col">
+                <br>
+                <h3>Recent</h3>
+                <p class="mb-0">Appointed publicity co-chair for <a href="https://www.discotec.org/">DisCoTec</a> 2025/2026</p>
+                <p class="mb-0"><a href="#publications">MAGπ!</a> accepted for publication at <a href="https://www.discotec.org/2024/forte">FORTE'24</a></p>
             </div>
         </div>
         <div class="row spacer"></div>
@@ -40,6 +47,7 @@
                         <a class="nav-item nav-link" href="#about">About</a>
                         <a class="nav-item nav-link" href="#publications">Publications</a>
                         <a class="nav-item nav-link" href="#teaching">Teaching</a>
+                        <a class="nav-item nav-link" href="#funding">Funding</a>
                         <a class="nav-item nav-link" href="#open">Open Source</a>
                         <a class="nav-item nav-link" href="#events">Events</a>
                         <a class="nav-item nav-link" href="#education">Education</a>
@@ -58,20 +66,25 @@
                         <h2>About</h2>
 
                         <p>
-                            I am a 2nd year Ph.D. student in the <a
+                            I am a final year Ph.D. student in the <a
                                 href="https://www.gla.ac.uk/schools/computing/">School of Computing Science</a>
-                            at the University of Glasgow, supervised by <a
-                                href="https://www.dcs.gla.ac.uk/~ornela/">Ornela Dardha</a> and <a
-                                href="https://simonjf.com/">Simon Fowler</a>.
+                            at the University of Glasgow, supervised by 
+                            <a href="https://www.dcs.gla.ac.uk/~ornela/">Ornela Dardha</a>, 
+                            <a href="https://simonjf.com/">Simon Fowler</a>, and 
+                            <a href="http://paul-harvey.org/">Paul Harvey</a>.
+                        </p>
+                        <p>
+                            My Ph.D. research spans the areas of Concurrency, Programming Languages, Behavioural Types, and Fault Tolerance.
+                            In essence, I explore type systems for message-passing programs that are prone to networking errors.
                         </p>
                         <p>
                             I am a member of the <a
                                 href="https://www.gla.ac.uk/schools/computing/research/researchsections/fata-section/">Formal
                                 Analysis, Theory and Algorithms (FATA)</a>
-                            group, forming part of the <a
+                            group, and the <a
                                 href="https://www.gla.ac.uk/schools/computing/research/researchthemes/pl-theme/">Programming
-                                Languages Theme</a>,
-                            and am Scotland's Ph.D. student representative within <a
+                                Languages Theme</a>.
+                            I am also Glasgow's Ph.D. student representative within <a
                                 href="https://scottish-pl-institute.github.io/index.html">SPLI</a>.
                         </p>
                         <p>
@@ -79,11 +92,6 @@
                                 href="https://www.um.edu.mt/ict/">University of Malta</a>,
                             supervised by <a href="http://staff.um.edu.mt/afra1/">Adrian Francalanza</a>.
                             My research focus was in distributed computing and consensus algorithms.
-                        </p>
-                        <p>
-                            Nowadays, my Ph.D. research spans the areas of Programming Languages, Behavioural Type
-                            Theory, Distributed and Concurrent
-                            Computation, Logic, and Fault-Tolerance.
                         </p>
                     </div>
                     <div class="col-1"></div>
@@ -101,6 +109,24 @@
                         <h4>Proceedings Papers</h4>
 
                         <dl class="container">
+                            <dt>MAGπ!: The Role of Replication in Typing Failure-Prone Communication</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun, Ornela Dardha
+                                    <br>
+                                    <i>Formal Techniques for Distributed Objects, Components, and Systems (FORTE) 2024</i>
+                                </div>
+                                <div class="col text-end">
+                                    <a href="https://link.springer.com/chapter/10.1007/978-3-031-62645-6_6"
+                                        title="Published">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                    <a href="https://arxiv.org/abs/2404.16213" title="Extended">
+                                        <span class="fa fa-2x fa-file-pdf-o"></span></a>
+                                    <a href="https://dblp.org/rec/conf/forte/BrunD24.html?view=bibtex">
+                                        <span title="Bibtex" class="fa fa-2x fa-file-code-o"></span></a>
+                                </div>
+                            </dd>
+
                             <dt>MAGπ: Types for Failure-Prone Communication</dt>
                             <dd class="row paper">
                                 <div class="col-10">
@@ -135,9 +161,22 @@
                             </dd>
                         </dl>
 
-                        <h4>Talk Proposals</h4>
+                        <h4>Talks and Extended Abstracts</h4>
 
                         <dl class="container">
+                            <dt>Towards Session-Typed Consensus</dt>
+                            <dd class="row paper">
+                                <div class="col-10">
+                                    Matthew Alan Le Brun, Ornela Dardha
+                                    <br>
+                                    <i>30 Years of Session Types (ST30) @ SPLASH'23</i>
+                                </div>
+                                <div class="col text-end">
+                                    <a href="https://www.youtube.com/watch?v=72j5onx4nfo" title="Talk">
+                                        <span class="fa fa-2x fa-file-video-o"></span></a>
+                                </div>
+                            </dd>
+
                             <dt>MAGπ: Types for Failure-Prone Communication</dt>
                             <dd class="row paper">
                                 <div class="col-10">
@@ -197,6 +236,16 @@
 
                         <h4>Lectures</h4>
                         <dl class="container">
+                            <dt><a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4016">Programming Languages (H)</a></dt>
+                            <dd class="row paper">
+                                <div class="col">
+                                    University of Glasgow, 2024
+                                    <br>
+                                    <i>Delivered two lectures of 2 hours each on the foundations of programming language implementation; 
+                                        one lecture discussed the approached of interpretation and compilation, the other was on approaches to parsing.
+                                    </i>
+                                </div>
+                            </dd>
                             <dt><a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4072">Theory of Computation (H)</a></dt>
                             <dd class="row paper">
                                 <div class="col">
@@ -221,13 +270,17 @@
                             </dd>
                         </dl>
 
+                        <h4>Supervision</h4>
+
+                        <p>Since 2023, I have acted as primary supervisor for <strong>1</strong> <a href="https://www.gla.ac.uk/postgraduate/taught/computingscience/?card=course&code=COMPSCI5086P">MSc CS+</a> student, and <strong>1</strong> <a href="">MSci (integrated masters)</a> student.</p>
+
                         <h4>Teaching Assistant</h4>
 
                         <dl class="container">
                             <dt>University of Glasgow</dt>
                             <dd class="row paper">
                                 <div class="col">
-                                    <a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4016">Programming Languages (H)</a>, 2023
+                                    <a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4016">Programming Languages (H)</a>, 2023&mdash;2024
                                     <br>
                                     <a href="https://www.gla.ac.uk/coursecatalogue/course/?code=COMPSCI4072">Theory of Computation (H)</a>, 2023
                                 </div>
@@ -248,6 +301,24 @@
                 <div class="row sec-b-spacer"></div>
             </div>
 
+
+            <div class="container" id="funding">
+                <div class="row sec-t-spacer"></div>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <h2>Funding</h2>
+
+                        <p>
+                            In 2023 I spent a month on secondment at Carnegie Mellon University, hosted by <a href="https://www.cs.cmu.edu/~fp/">Frank Pfenning</a> and <a href="https://www.cs.cmu.edu/~balzers/">Stephanie Balzer</a>.
+                            During the time, we conducted an initial investigation of logical interpretations of session types for failure-prone message-passing systems.
+                        </p>
+                        <p>This secondment was funded by the <a href="https://www.um.edu.mt/projects/behapi/">BehAPI</a> project (awarding me <strong>€2,000</strong>), and University of Glasgow's College of Science and Engineering (awarding me <strong>£2,000</strong> as a successful applicant of the <a href="https://www.gla.ac.uk/colleges/scienceengineering/graduateschool/mobility/#:~:text=Mobility%20scholarships&text=These%20scholarships%20are%20aimed%20at,Excellence%20in%20research%20and">mobility scholarship</a>).</p>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <div class="row sec-b-spacer"></div>
+            </div>
 
             <div class="container" id="open">
                 <div class="row sec-t-spacer"></div>
@@ -277,11 +348,16 @@
                         <h2>Events</h2>
 
                         <dl class="container">
+                            <dt><a href="https://spli.scot/splv/2024-strathclyde/">Scottish Programming Languages and Verification Summer School (SPLV), July 2024</a> (Participant)</dt>
+                            <dt><a href="https://www.discotec.org/2024/ice">ICE 2024</a> (Programme Committee)</dt>
+                            <dt><a href="https://places-workshop.github.io/2024/committees">PLACES 2024</a> (Programme Committee)</dt>
+                            <dt><a href="https://etaps.org/2024/conferences/artifact-evaluation-esop-fase-fossacs/">ESOP/FASE/FoSSaCS 2024</a> (Artifact Evaluation Committee)</dt>
+                            <dt><a href="#funding">Visiting Carnegie Mellon University, November-December 2023</a> (Secondment)</dt>
                             <dt><a href="https://www.um.edu.mt/projects/behapi/behapi-tutorial-day-discotec-2023/">BehAPI Tutorial Day @ DisCoTec, June 2023</a> (Invited Participant)</dt>
                             <dt><a href="https://www.gla.ac.uk/events/sciencefestival/gsf2023/">Glasgow Science Festival, June 2023</a> (Science Communicator)</dt>
                             <dt><a href="http://www.discotec.org/2023/forte.html">Formal Techniques for Distributed Objects, Components, and Systems (FORTE), June 2023</a> (Reviewer)</dt>
                             <dt><a href="https://concur2022.mimuw.edu.pl/">International Conference on Concurrency Theory (CONCUR), September 2022</a> (Reviewer)</dt>
-                            <dt><a href="https://www.macs.hw.ac.uk/splv/splv-2022/">Scottish Programming Languages and Verification Summer School (SPLV), July 2022</a> (Invited Participant)</dt>
+                            <dt><a href="https://www.macs.hw.ac.uk/splv/splv-2022/">Scottish Programming Languages and Verification Summer School (SPLV), July 2022</a> (Participant)</dt>
                             <dt><a href="https://spls-series.github.io/meetings/2022/july/">Scottish Programming Languages Seminar (SPLS), July 2022</a> (Organiser)</dt>
                             <dt><a href="https://www.gla.ac.uk/events/sciencefestival/aboutus/previousglasgowsciencefestivals/gsf2022/">Glasgow Science Festival, June 2022</a> (Science Communicator)</dt>
                             <dt><a href="https://2021.euro-par.org/">European Conference on Parallel and Distributed Computing (Euro-Par), August 2021</a> (Reviewer)</dt>
@@ -307,7 +383,7 @@
                                 <div class="col">
                                     University of Glasgow, 2022&mdash;present
                                     <br>
-                                    <i>My Ph.D. is in Programming Languages, Behavioural Type Theory, Concurrent and Distributed Computation, and Fault-Tolerance.
+                                    <i>My Ph.D. is in Programming Languages, Behavioural Type Theory, Concurrent and Distributed Computation, and Fault Tolerance.
                                     </i>
                                 </div>
                             </dd>
@@ -396,7 +472,7 @@
     }
 
     .top-spacer {
-        height: 10rem;
+        height: 5rem;
     }
 
     .spacer {
