Add Buy me a coffee link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col">
                 <br>
                 <h3>Recent</h3>
-                <p>Started writing my <a href="./thesis/thesisometer.html">thesis</a>!</p>
+                <p>Started writing my <a href="./thesis/thesisometer.html">thesis</a>! <a href="https://buymeacoffee.com/evarb">Buy me a coffee</a>!</p>
                 <p class="mb-0">Appointed publicity co-chair for <a href="https://www.discotec.org/">DisCoTec</a> 2025/2026</p>
                 <p class="mb-0"><a href="#publications">MAGπ!</a> accepted for publication at <a href="https://www.discotec.org/2024/forte">FORTE'24</a></p>
             </div>
